--- a/surge.conf
+++ b/surge.conf
@@ -2065,6 +2065,8 @@ DOMAIN-SUFFIX,google.co.kr
 DOMAIN-SUFFIX,google.co.ma
 DOMAIN-SUFFIX,google.co.uk
 DOMAIN-SUFFIX,google.com
+DOMAIN-SUFFIX,google.com.hk
+DOMAIN-SUFFIX,google.com.tw
 DOMAIN-SUFFIX,google.de
 DOMAIN-SUFFIX,google.dev
 DOMAIN-SUFFIX,google.dj
