--- a/surge.conf
+++ b/surge.conf
@@ -5873,3 +5873,5 @@ DOMAIN-SUFFIX,zyzc9.com
 DOMAIN-SUFFIX,zzcartoon.com
 DOMAIN-SUFFIX,zzcloud.me
 DOMAIN-SUFFIX,zzux.com
+DOMAIN-SUFFIX,ae
+DOMAIN-SUFFIX,in
