--- a/surge.conf
+++ b/surge.conf
@@ -1,3 +1,5 @@
+DOMAIN-SUFFIX,binance.cloud
+DOMAIN-SUFFIX,bnappzh.co
 DOMAIN-SUFFIX,binance.me
 DOMAIN-SUFFIX,apple.com
 DOMAIN-SUFFIX,000webhost.com
